/*
--add-modules
javafx.base,javafx.graphics
-p
\javafx-sdk-13.0.2\lib\javafx.base.jar
:\javafx-sdk-13.0.2\lib\javafx.graphics.jar
 */

plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
    id 'org.javamodularity.moduleplugin' version "1.5.0"
    id 'org.beryx.jlink' version '2.16.2'
    id 'com.gluonhq.client-gradle-plugin' version '0.0.11'

}

group 'org.example'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
   jcenter()
    maven {
        url 'http://nexus.gluonhq.com/nexus/content/repositories/releases'
    }
}
javafx {
    version = "11.0.2"
    modules = [ 'javafx.controls','javafx.fxml','javafx.base','javafx.graphics','javafx.media' ] // you can add 'javafx.fxml', ...
}
task fatJar(type: Jar) {
    manifest {
        attributes 'Implementation-Title': 'Gradle Jar File Example',
                'Implementation-Version': version,
                'Main-Class': 'app.Main'
    }
    baseName = project.name + ''
    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}
dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'

    compile group: 'io.github.radamus', name: 'usbdrivedetector', version: '2.4.0'
    compile group: 'org.jfxtras', name: 'jmetro', version: '11.6'
    compile group: 'org.jfxtras', name: 'jfxtras-controls', version: '8.0-r6'
    compile group: 'com.jfoenix', name: 'jfoenix', version: '9.0.9'
    compile group: 'com.gluonhq', name: 'charm-glisten', version: '6.0.2'
    compile group: 'black.ninia', name: 'jep', version: '3.9.0'
    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.0'
    implementation 'net.samuelcampos:usbdrivedetector:2.1.1'
    compile group: 'de.jensd', name: 'fontawesomefx', version: '8.9'
    compile group: 'org.scream3r', name: 'jssc', version: '2.8.0'
    compile 'de.jensd:fontawesomefx-emojione:2.2.7-2'
    compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-5'
    compile 'de.jensd:fontawesomefx-icons525:3.0.0-4'
    compile 'de.jensd:fontawesomefx-materialdesignfont:1.7.22-4'
    compile 'de.jensd:fontawesomefx-materialicons:2.2.0-5'
    compile 'de.jensd:fontawesomefx-octicons:4.3.0-5'
    compile 'de.jensd:fontawesomefx-weathericons:2.0.10-5'
    // https://mvnrepository.com/artifact/de.jensd/fontawesomefx-commons
    runtime group: 'de.jensd', name: 'fontawesomefx-commons', version: '9.1.2'

    compile 'org.controlsfx:controlsfx:8.40.11'
    compile group: 'com.dlsc.workbenchfx', name: 'workbenchfx-core', version: '11.0.3'
//Thanks for using https://jar-download.com








}
jlink {
    launcher {
        //noinspection GroovyAssignabilityCheck
        options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
        name = 'GitHub_Web_App_x64_windows'
        addExtraDependencies("javafx")
        addExtraDependencies("jfxtras")
    }
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
